--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <title>Ravi Raina</title>
 <body>
-    <div>
+    <div class="img">
+
+    </div>
+    <div class="info">
         I am a 4th year Computer Science student, minoring in Economics and Music Technology. I enjoy music (both playing and listening), Biking, Skiing and the outdoors in general.
+    </div>
+    <div class="class-links">
+
+    </div>
+    <div class="rel-links">
+
     </div>
 </body>
