added more detail to index

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
-<title>Ravi Raina</title>
-<body>
-    <div class="img">
-
-    </div>
+<!DOCTYPE html>
+<html>
+  <title>Ravi Raina</title>
+  <body>
+    <div class="headshot"></div>
     <div class="info">
-        I am a 4th year Computer Science student, minoring in Economics and Music Technology. I enjoy music (both playing and listening), Biking, Skiing and the outdoors in general.
+      <p>
+        I am a 4th year Computer Science student, minoring in Economics and
+        Music Technology. <br />I enjoy music (both playing and listening),
+        Biking, Skiing, and Photography, with my main medium being film. <br />I
+        am from British Colombia, having grown up in Pemberton and Whistler, BC
+        (a little north of Vancouver)
+      </p>
     </div>
+    <div class="photo"></div>
     <div class="class-links">
-
+      <h1>My F2020 Courses</h1>
     </div>
     <div class="rel-links">
-
+      <h1>MUMT301 F2020 Student Directory</h1>
     </div>
-</body>
+  </body>
+</html>
