added course links

--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     <div class="photo"></div>
     <div class="class-links">
       <h1>My F2020 Courses</h1>
+      <a href="https://www.mcgill.ca/study/2020-2021/courses/mumt-301"
+        >MUMT301: Music and the Internet</a
+      ><br />
+      <a href="https://www.mcgill.ca/study/2021-2022/courses/comp-330"
+        >COMP330: Theory of Computation</a
+      ><br />
+      <a href="https://www.mcgill.ca/study/2021-2022/courses/comp-417"
+        >COMP417: Intro to Robotics and Intelligent Systems</a
+      ><br />
+      <a href="https://www.mcgill.ca/study/2021-2022/courses/comp-596"
+        >COMP596: From Natural Language to Data Science</a
+      ><br />
+      <a href="https://www.mcgill.ca/study/2021-2022/courses/econ-302"
+        >ECON302: Money, Banking, and Government Policy</a
+      ><br />
     </div>
     <div class="rel-links">
       <h1>MUMT301 F2020 Student Directory</h1>
