added more detail and headshot

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
   <title>Ravi Raina</title>
+  <header>
+    <div class="nav">
+      <h1 style="text-align: center">
+        <a href="#">Home</a> | <a href="assignments.html">Assignments</a>
+      </h1>
+    </div>
+  </header>
   <body>
-    <div class="headshot"></div>
+    <h1>Ravi Raina</h1>
+    <div class="headshot">
+      <img src="resources/ravi_headshot.jpeg" width="50%" height="50%"">
+    </div>
     <div class="info">
       <p>
         I am a 4th year Computer Science student, minoring in Economics and
@@ -14,7 +24,7 @@
     </div>
     <div class="photo"></div>
     <div class="class-links">
-      <h1>My F2020 Courses</h1>
+      <h1>My F2021 Courses</h1>
       <a href="https://www.mcgill.ca/study/2020-2021/courses/mumt-301"
         >MUMT301: Music and the Internet</a
       ><br />
@@ -32,7 +42,7 @@
       ><br />
     </div>
     <div class="rel-links">
-      <h1>MUMT301 F2020 Student Directory</h1>
+      <h1>MUMT301 F2021 Student Directory</h1>
     </div>
   </body>
 </html>
