added assignments, student links, updated formatting

--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <title>Ravi Raina</title>
-  <header>
-    <div class="nav">
-      <h1 style="text-align: center">
-        <a href="#">Home</a> | <a href="assignments.html">Assignments</a>
-      </h1>
+<title>Ravi Raina</title>
+<header>
+  <div class="nav">
+    <h1 style="text-align: center">
+      <a href="#">Home</a> | <a href="assignments.html">Assignments</a>
+    </h1>
+  </div>
+</header>
+
+<body style="text-align: center">
+  <h1>Ravi Raina</h1>
+  <div class="headshot">
+    <img src="resources/ravi_headshot.jpeg" width="50%" height="50%"">
     </div>
-  </header>
-  <body>
-    <h1>Ravi Raina</h1>
-    <div class="headshot">
-      <img src="resources/ravi_headshot.jpeg" width="50%" height="50%"">
-    </div>
-    <div class="info">
-      <p>
-        I am a 4th year Computer Science student, minoring in Economics and
-        Music Technology. <br />I enjoy music (both playing and listening),
-        Biking, Skiing, and Photography, with my main medium being film. <br />I
-        am from British Colombia, having grown up in Pemberton and Whistler, BC
-        (a little north of Vancouver)
-      </p>
-    </div>
-    <div class="photo"></div>
-    <div class="class-links">
-      <h1>My F2021 Courses</h1>
-      <a href="https://www.mcgill.ca/study/2020-2021/courses/mumt-301"
-        >MUMT301: Music and the Internet</a
-      ><br />
-      <a href="https://www.mcgill.ca/study/2021-2022/courses/comp-330"
-        >COMP330: Theory of Computation</a
-      ><br />
-      <a href="https://www.mcgill.ca/study/2021-2022/courses/comp-417"
-        >COMP417: Intro to Robotics and Intelligent Systems</a
-      ><br />
-      <a href="https://www.mcgill.ca/study/2021-2022/courses/comp-596"
-        >COMP596: From Natural Language to Data Science</a
-      ><br />
-      <a href="https://www.mcgill.ca/study/2021-2022/courses/econ-302"
-        >ECON302: Money, Banking, and Government Policy</a
-      ><br />
-    </div>
-    <div class="rel-links">
-      <h1>MUMT301 F2021 Student Directory</h1>
-    </div>
-  </body>
+    <div class=" info">
+    <p>
+      I am a 4th year Computer Science student, minoring in Economics and
+      Music Technology. <br />I enjoy music (both playing and listening),
+      Biking, Skiing, and Photography, with my main medium being film. <br />I
+      am from British Colombia, having grown up in Pemberton and Whistler, BC
+      (a little north of Vancouver)
+    </p>
+  </div>
+  <div class="photo"></div>
+  <div class="class-links">
+    <h1>My F2021 Courses</h1>
+    <a href="https://www.mcgill.ca/study/2020-2021/courses/mumt-301">MUMT301: Music and the Internet</a>
+    <br /><a href="https://www.mcgill.ca/study/2021-2022/courses/comp-330">COMP330: Theory of Computation</a>
+    <br /><a href="https://www.mcgill.ca/study/2021-2022/courses/comp-417">COMP417: Intro to Robotics and Intelligent
+      Systems</a>
+    <br /><a href="https://www.mcgill.ca/study/2021-2022/courses/comp-596">COMP596: From Natural Language to Data
+      Science</a>
+    <br /><a href="https://www.mcgill.ca/study/2021-2022/courses/econ-302">ECON302: Money, Banking, and Government
+      Policy</a>
+  </div>
+  <div class="rel-links">
+    <h1>MUMT301 F2021 Student Pages</h1>
+    <a href="https://mumt301.github.io/Asu_Simla_Ayduran/">Asu Simla Ayduran</a>
+    <br /><a href="https://mumt301.github.io/beryl/">Beryl Arnould</a>
+    <br /><a href="https://mumt301.github.io/orosze/">Eric Orosz</a>
+    <br /><a href="https://mumt301.github.io/hteyssier/">Hector Teyssier</a>
+    <br /><a href="https://mumt301.github.io/Jamie-Oneschuk-Repository-/">Jamie Oneschuk</a>
+    <br /><a href="https://mumt301.github.io/naomifung01/">Naomi Fung</a>
+    <br /><a href="https://mumt301.github.io/nicolesue/">Nicole Sue</a>
+    <br /><a href="https://mumt301.github.io/Rebecca-Lee/">Rebecca Lee</a>
+    <br /><a href="https://mumt301.github.io/Sarah-Gao/">Sarah Gao</a>
+    <br /><a href="https://mumt301.github.io/SidAlHussaini/">Sid Al Hussaini</a>
+  </div>
+</body>
+
 </html>
