--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Ravi Raina</title>
+<title>Ravi Raina | Home</title>
 <header>
   <div class="nav">
     <h1 style="text-align: center">
