added to classmate links

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     <br /><a href="https://mumt301.github.io/Rebecca-Lee/">Rebecca Lee</a>
     <br /><a href="https://mumt301.github.io/Sarah-Gao/">Sarah Gao</a>
     <br /><a href="https://mumt301.github.io/SidAlHussaini/">Sid Al Hussaini</a>
+    <br /><a href="https://mumt301.github.io/tibetahunbay/">Tibet Ahunbay</a>
+
   </div>
 </body>
 
