--- a/assignments.html
+++ b/assignments.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <title>Ravi Raina | Assignments</title>
+
+<style>
+    body {
+        background-color: wheat;
+    }
+</style>
+
 <header>
     <div class="nav">
         <h1 style="text-align: center">
-            <a href="index.html">Home</a> | <a href="#">Assignments</a>
+            <a href="index.html">Home</a>
         </h1>
     </div>
 </header>
@@ -14,5 +21,6 @@
         <h1>Assignments:</h1>
         <a href="A1/questionnaire.txt">Assignment 1</a><br />
         <a href="index.html">Assignment 2</a><br />
+        <a href="fanpage.html">Assignment 3</a><br />
     </div>
 </body>
