added bg music, fixed relative link to home

--- a/fanpage.html
+++ b/fanpage.html
@@ -1,6 +1,8 @@
 <head>
     <title>Ravi Raina | Assignment 3</title>
     <link rel="stylesheet" href="styles/fanpage_styles.css">
+    <iframe style="width: 0px; height: 0px;" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/101146735&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 </head>
 
 <body>
@@ -14,9 +16,7 @@
             <div class="sect">
                 <h1>J-Dilla</h1>
                 <p>
-                    <iframe style="border: 1; width: 200px; height: 200px; margin-right:15px; float: left"
-                        allow="autoplay"
-                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/101146735&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+
 
                     James Dewitt Yancey (February 7, 1974 – February 10, 2006), better known by the stage names J
                     Dilla and Jay Dee, was an American record producer and rapper who emerged in the mid-1990s
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <label for="tabfour"><a href="/assignments.html" name="tabs" id="tabfour">Home</a></label>
+        <label for="tabfour"><a href="index.html" name="tabs" id="tabfour">Home</a></label>
     </div>
 </body>
 <footer>
