added second sample table and data, cleaned up code

--- a/A4/audio_compression.html
+++ b/A4/audio_compression.html
@@ -3,10 +3,15 @@
     <link id="cssframework" rel="stylesheet" href="https://minicss.org/flavorFiles/mini-default.css">
 </head>
 
-<!-- display blues sample table on click -->
-<button type="button" onclick=create_media_table(blues)>Show Blues Sample Table</button>
-<div id="discography_table" class="container"></div>
-
-<!-- display church sample table on click -->
-<button type="button" onclick=create_media_table(church)>Show Church Sample Table</button>
-<div id="discography_table" class="container"></div>
+<body style="text-align: center;">
+    <!-- display blues sample table on click -->
+    <div>
+        <button type="button" onclick=create_media_table(blues)>Show Blues Sample Table</button>
+        <div id="compression_table" class="container"></div>
+    </div>
+    <div>
+        <!-- display church sample table on click -->
+        <button type="button" onclick=create_media_table(church)>Show Church Sample Table</button>
+        <div id="compression_table" class="container"></div>
+    </div>
+</body>
