--- a/assignments.html
+++ b/assignments.html
@@ -19,8 +19,9 @@
 <body>
     <div class="assignment-links">
         <h1>Assignments:</h1>
-        <a href="A1/questionnaire.txt">Assignment 1</a><br />
-        <a href="index.html">Assignment 2</a><br />
-        <a href="fanpage.html">Assignment 3</a><br />
+        <a href="A1/questionnaire.txt">Assignment 1: Questionnaire</a><br />
+        <a href="index.html">Assignment 2: Homepage</a><br />
+        <a href="fanpage.html">Assignment 3: Fanpage</a><br />
+        <a href="A4/audio_compression.html">Assignment 4: Compression Tables</a><br />
     </div>
 </body>
