added A6 to assignments page

--- a/assignments.html
+++ b/assignments.html
@@ -23,5 +23,6 @@
         <a href="index.html">Assignment 2: Homepage</a><br />
         <a href="fanpage.html">Assignment 3: Fanpage</a><br />
         <a href="A4/audio_compression.html">Assignment 4: Compression Tables</a><br />
+        <a href="A6/query.html">Assignment 6: MusicBrainz Discography Query</a><br />
     </div>
 </body>
