--- a/assignments.html
+++ b/assignments.html
@@ -21,8 +21,9 @@
         <h1>Assignments:</h1>
         <a href="A1/questionnaire.txt">Assignment 1: Questionnaire</a><br />
         <a href="index.html">Assignment 2: Homepage</a><br />
-        <a href="fanpage.html">Assignment 3: Fanpage</a><br />
+        <a href="A3/fanpage.html">Assignment 3: Fanpage</a><br />
         <a href="A4/audio_compression.html">Assignment 4: Compression Tables</a><br />
+        <a href="A5/Ravi R. - Shazam Presentation.pdf">Assignment 5: Shazam Presentation</a><br />
         <a href="A6/query.html">Assignment 6: MusicBrainz Discography Query</a><br />
     </div>
 </body>
