--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Ravi Raina | Home</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <header>
 
