--- a/A3/fanpage.html
+++ b/A3/fanpage.html
@@ -1,6 +1,6 @@
 <head>
     <title>Ravi Raina | Assignment 3</title>
-    <link rel="stylesheet" href="fanpage_styles.css">
+    <link rel="stylesheet" href="styles.css">
     <iframe style="width: 0px; height: 0px;" allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/101146735&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 </head>
