half of A7 completed, added link in assignments page

--- a/assignments.html
+++ b/assignments.html
@@ -25,5 +25,6 @@
         <a href="A4/audio_compression.html">Assignment 4: Compression Tables</a><br />
         <a href="A5/Ravi R. - Shazam Presentation.pdf">Assignment 5: Shazam Presentation</a><br />
         <a href="A6/query.html">Assignment 6: MusicBrainz Discography Query</a><br />
+        <a href="A7/theremin.html">Assignment 7: Web-based Theremin Instrument</a><br />
     </div>
 </body>
