bug fixes, added variable min/max frequency, minor UI changes

--- a/A7/theremin.html
+++ b/A7/theremin.html
@@ -53,7 +53,7 @@
 
                     <label for="minfreq">Minimum frequency (110-220Hz)</label>
                     <input type="number" id="minfreq" name="minfreq" min="110" max="220" value="220">
-                    <label for="maxfreq">Minimum frequency (440-1760Hz)</label>
+                    <label for="maxfreq">Maximum frequency (440-1760Hz)</label>
                     <input type="number" id="maxfreq" name="maxfreq" min="440" max="1760" value="880">
 
                     <input type="submit" value="Submit">
@@ -61,9 +61,6 @@
             </form>
         </div>
     </div>
-
-
-
 </body>
 
 </html>
