added play by click, out of tune info, fixed some formatting

--- a/A7/theremin.html
+++ b/A7/theremin.html
@@ -23,9 +23,11 @@
                 <fieldset>
                     <legend>Note Information</legend>
                     <p id="note1"></p>
-                    <p id="note2"></p>
+                    <p id="note2"></p></br>
                     <p id="frequency1"></p>
-                    <p id="frequency2"></p>
+                    <p id="frequency2"></p></br>
+                    <p id="otoc1"></p>
+                    <p id="otoc2"></p>
                 </fieldset>
             </form>
         </div>
