added option to select between click and slide

--- a/A7/theremin.html
+++ b/A7/theremin.html
@@ -53,6 +53,12 @@
                         <option value="sawtooth">Sawtooth</option>
                     </select>
 
+                    <label for="playbacktype">Playback Type</label>
+                    <select name="playbacktype" id="playbacktype">
+                        <option value="slide">Slide</option>
+                        <option value="click">Click</option>
+                    </select>
+
                     <label for="minfreq">Minimum frequency (110-220Hz)</label>
                     <input type="number" id="minfreq" name="minfreq" min="110" max="220" value="220">
                     <label for="maxfreq">Maximum frequency (440-1760Hz)</label>
