--- a/assignments.html
+++ b/assignments.html
@@ -26,5 +26,6 @@
         <a href="A5/Ravi R. - Shazam Presentation.pdf">Assignment 5: Shazam Presentation</a><br />
         <a href="A6/query.html">Assignment 6: MusicBrainz Discography Query</a><br />
         <a href="A7/theremin.html">Assignment 7: Web-based Theremin Instrument</a><br />
+        <a href="Project/index.html">Final Project: Web-based Keyboard Synthesizer</a><br />
     </div>
 </body>
