--- a/Project/index.html
+++ b/Project/index.html
@@ -54,6 +54,9 @@
                             <input id="release" type="range" min="0" max="10" step="1" value="0">
                             <p>Release: <span id="releaseamount">0</span></p>
 
+                            <input id="distortion" type="range" min="0" max="3" step="0.1" value="0">
+                            <p>Distortion: <span id="distortionamount">0</span></p>
+
                             <label for="osctype">Oscillator Type</label>
                             <select name="osctype" id="osctype">
                                 <option value="sine">Sine</option>
